--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,4 +15,6 @@
             <app-user [id]="users[2].id" [avatar]="users[2].avatar" [name]="users[2].name" (select)="onSelectUser($event)" />
         </li>
     </ul>
+
+    <app-tasks [name]="selectedUser.name"/>
 </main>
