--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,9 @@
             </li>
         }
     </ul>
-
-    <app-tasks [name]="selectedUser ? selectedUser.name : ''"/>
+    @if (selectedUser) {
+        <app-tasks [name]="selectedUser.name"/>
+    } @else {
+        <p id="fallback">Select a user to see a task</p>
+    }
 </main>
