--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,2 @@
-<app-header/>
-<main>
-    <ul id="users">
-        @for (user of users; track user.id) {
-            <li>
-                <app-user
-                        [selected]="user.id === selectedUserId"
-                        [user]="user"
-                        (select)="onSelectUser($event)" />
-            </li>
-        }
-    </ul>
-    @if (selectedUser) {
-        <app-tasks [userId]="selectedUser.id" [name]="selectedUser.name"/>
-    } @else {
-        <p id="fallback">Select a user to see a task</p>
-    }
-</main>
+<app-header />
+<app-user-input />
