--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <header>
-    <img src="../../assets/task-management-logo.png" alt="A todo list">
-    <h1>EasyTask</h1>
-    <p>Enterprise-level task management without friction</p>
+    <img src="investment-calculator-logo.png" alt="A money bag"/>
+    <h1>
+        Investment Calculator
+    </h1>
 </header>
