feat: Supporting Content Projection with Multiple Slots

--- a/src/app/shared/button/button.component.html
+++ b/src/app/shared/button/button.component.html
@@ -1,8 +1,4 @@
-<button>
-   <span>
-            Submit
-    </span>
-    <span class="icon">
-            ⌲
-          </span>
-</button>
+ <span>
+     <ng-content />
+ </span>
+     <ng-content select=".icon"/>
