--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
                 <a href="/">Management</a>
             </li>
             <li>
-                <app-button />
+                <button appButton>Logout <span class="icon"> → </span></button>
             </li>
         </ul>
     </nav>
