--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,7 @@
 <!--    }-->
 
 <!--    <p *ngIf="isAdmin()">Only admins should see this!</p>-->
-    <p appAuth="admin">Only admin should see this!</p>
+    <ng-template appAuth="admin">
+        <p>Only admin should see this!</p>
+    </ng-template>
 </main>
