--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,11 @@
 <!--    }-->
 
 <!--    <p *ngIf="isAdmin()">Only admins should see this!</p>-->
-    <ng-template appAuth="admin">
-        <p>Only admin should see this!</p>
-    </ng-template>
+<!--    <ng-template appAuth="admin">-->
+<!--        <p>Only admin should see this!</p>-->
+<!--    </ng-template>-->
+
+    <p *appAuth="'admin'" class="protected-content admin">Only admin should see this!</p>
+    <p *appAuth="'user'" class="protected-content unauthenticated">Regular users should see this!</p>
+    <p *appAuth="'guest'" class="protected-content authenticated">Guest users should see this!</p>
 </main>
