--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,30 @@
 <main>
-  <app-learning-resources/>
+  <article class="temperatures">
+    <header>
+      <img src="temp-icon.png" alt="Thermometer icon" />
+      <div>
+        <h2>Current Temperatures</h2>
+        <p>{{ currentDate }}</p>
+      </div>
+    </header>
+    <p>New York: {{ currentTemperaturs.newYork }}</p>
+    <p>Berlin: {{ currentTemperaturs.berlin }}</p>
+    <p>Paris: {{ currentTemperaturs.paris }}</p>
+    <p>Chicago: {{ currentTemperaturs.chicago }}</p>
+  </article>
 
-  <hr />
-
-  <app-auth/>
-
-<!--    @if(isAdmin()){-->
-<!--        <p>Only admins should see this!</p>-->
-<!--    }-->
-
-<!--    <p *ngIf="isAdmin()">Only admins should see this!</p>-->
-<!--    <ng-template appAuth="admin">-->
-<!--        <p>Only admin should see this!</p>-->
-<!--    </ng-template>-->
-
-    <p *appAuth="'admin'" class="protected-content admin" appLog>Only admin should see this!</p>
-    <p *appAuth="'user'" class="protected-content unauthenticated">Regular users should see this!</p>
-    <p *appAuth="'guest'" class="protected-content authenticated">Guest users should see this!</p>
+  <article class="temperatures">
+    <header>
+      <img src="temp-icon.png" alt="Thermometer icon" />
+      <div>
+        <h2>Historic Temperatures</h2>
+        <p>Berlin</p>
+      </div>
+    </header>
+    <ul>
+      @for (temperature of historicTemperatures; track temperature) {
+      <li (click)="onReset($index)">{{ temperature }}</li>
+      }
+    </ul>
+  </article>
 </main>
